# ao-filedb-tools

./: .gitignore  FileInfo.py  ORMModel.py  ORMModelSqlAlchemy20.py  README.md  content_declarative_14.py  image_info.py  install_deps.py  main.py  pyproject.toml  storage_declarative_14.py
database/: content.sql  storage.sql
image_info/: BaseImage.py  ImageInfoFactory.py  ImageMetadata.py  PdfImage.py  PdfMetaData.py  PilImage.py  RawImage.py  __init__.py  image_info.py
run/: read_write.py
test/: test_ImgMetadata.py  test_PdfMetaData.py  test_data_model_img.py  test_data_model_pdf.py
test/sources/: I1CZ9700039.tif  I2PD181500001.tif
util/: util.py
